Page jumping and summary bugs (#9)
* Summary shows summary of IA

* Fix page jumping when action selected

--- a/hazyAI-frontend/src/App.css
+++ b/hazyAI-frontend/src/App.css
@@ -8,8 +8,9 @@
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  height: 570px;
 }
 
 h1 {
