--- a/hazyAI-frontend/src/components/response/response.module.css
+++ b/hazyAI-frontend/src/components/response/response.module.css
@@ -1,6 +1,7 @@
 table {
   border-collapse: collapse;
   width: 100%;
+  margin-bottom: 30px;
 }
 
 td,
